# Hello-OpenCL

./: .gitignore  CMakeLists.txt  README.md  embede_resource.py  kernal.cl  main.c
